tooling/nargo_cli/tests/snapshots/compile_failure/type_definition_annotation/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: struct `Foo` is never constructed
  ┌─ src/main.nr:2:8
  │
2 │ struct Foo { x: Field }
  │        --- struct is never constructed
  │

error: Assertion failed
  ┌─ src/main.nr:5:12
  │
5 │     assert(false);
  │            -----
  │
  = Call stack:
    1. src/main.nr:1:1

Aborting due to 1 previous error
